# rust_chip8

./: Cargo.toml  README.md
chip8_core/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
