[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8_core = {path = "../chip8_core"}

[dependencies.sdl2]
version = "*"
features = ["use_mac_framework"]